// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Subtitle MVP typescale correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: normal;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<p
  aria-hidden="false"
  class="c0 c1"
>
  Subtitle default
</p>
`;

exports[`should render Subtitle VDS theme correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: normal;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<p
  aria-hidden="false"
  class="c0 c1"
>
  Subtitle VDS theme
</p>
`;

exports[`should render Subtitle VDS typescale correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: normal;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<p
  aria-hidden="false"
  class="c0 c1"
>
  Subtitle VDS typescale
</p>
`;

exports[`should render Subtitle default props correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: normal;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<p
  aria-hidden="false"
  class="c0 c1"
>
  Subtitle default
</p>
`;

exports[`should render Subtitle grey faded correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: normal;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #F6F6F6;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<p
  aria-hidden="false"
  class="c0 c1"
>
  Subtitle grey faded
</p>
`;

exports[`should render Subtitle primitive as h4 correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: normal;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<h4
  aria-hidden="false"
  class="c0 c1"
>
  Subtitle h4
</h4>
`;

exports[`should render Subtitle theme props correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: normal;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<p
  aria-hidden="false"
  class="c0 c1"
>
  Subtitle MVP w/ theme
</p>
`;

exports[`should render Subtitle with default styles on mobile correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: normal;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<p
  aria-hidden="false"
  class="c0 c1"
>
  Subtitle on mobile
</p>
`;
